kubernetes/apps/platform/dash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dash
  namespace: dash
spec:
  selector:
    app: dash
  ports:
    - port: 80
      targetPort: 8080
