kubernetes/apps/platform/dash/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dash
  namespace: dash
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dash.lab.ryantaylor.tech`)
      kind: Rule
      services:
        - name: dash
          port: 80
  tls: {}
